--- a/themes/stickeroverflow/layout/layout.pug
+++ b/themes/stickeroverflow/layout/layout.pug
@@ -12,7 +12,7 @@ html
       a.navbar-item(href="/") 首页
       //- .navbar-brand
       //-   a(href="/") StickerOverflow
-      a.navbar-item(href="/categories/sticker") 所有贴纸
+      a.navbar-item(href="/stickers") 所有贴纸
       a.navbar-item 商店
       a.navbar-item 博客
       a.navbar-item 关于
