--- a/themes/stickeroverflow/layout/layout.pug
+++ b/themes/stickeroverflow/layout/layout.pug
@@ -12,8 +12,9 @@ html
       a.navbar-item(href="/") 首页
       //- .navbar-brand
       //-   a(href="/") StickerOverflow
-      a.navbar-item(href="/stickers") 所有贴纸
+      //- a.navbar-item(href="/stickers") 所有贴纸
       a.navbar-item 商店
-      a.navbar-item 博客
-      a.navbar-item 关于
+      a.navbar-item 许可列表
     !=body
+    footer.center
+      p Copyright StickerOverflow 2017
