--- a/themes/stickeroverflow/source/css/index.styl
+++ b/themes/stickeroverflow/source/css/index.styl
@@ -9,3 +9,30 @@ a.button.round
   text-align: center
   .img
     margin: 0 auto
+
+img.logo
+  border-radius: 50%
+  width: 128px
+  margin-bottom: 1.5em
+
+section.intro
+  line-height: 3em
+
+.padding
+  padding: 2em
+
+hr
+  width: 512px
+  margin: 2em auto
+
+footer
+  padding: 10em
+  font-size: .4em
+
+.posts
+  h3
+    margin-bottom: .5em
+  a
+    text-decoration: underline
+    color: inherit
+    font-size: .95em
