--- a/themes/stickeroverflow/layout/index.pug
+++ b/themes/stickeroverflow/layout/index.pug
@@ -5,7 +5,7 @@
 //-       h2.subtitle!= config.subtitle
 //-       a.button.is-light.is-medium.round FROM ¥6.9
 
-//- section#intro.container(style="margin-top: 2em;")
+//- section#intro.container(style="margin-top: 2rem;")
 //-   //- h1 StickerOverflow 优势
 //-   .columns
 //-     .column.is-4.content
@@ -20,12 +20,12 @@
 //-       h2 尊重版权
 //-       p 我们在制作每款贴纸前，会遵守每个图标对应的 License. 
 
-.container.center(style="margin-top: 5em;")
+.container.center(style="margin-top: 5rem;")
   section.padding
     img.logo(src="/images/logo.png")
     h1.title!= config.title
     h2.subtitle!= config.subtitle
-    a.button(href="").round.is-medium 官方商店
+    a.button(href=theme.store_url).round.is-medium 官方商店
   hr
   section.intro.padding
     h3.is-size-4 高质量
