--- a/themes/stickeroverflow/source/css/index.styl
+++ b/themes/stickeroverflow/source/css/index.styl
@@ -13,26 +13,25 @@ a.button.round
 img.logo
   border-radius: 50%
   width: 128px
-  margin-bottom: 1.5em
+  margin-bottom: 1.5rem
 
 section.intro
-  line-height: 3em
+  line-height: 3rem
 
 .padding
-  padding: 2em
+  padding: 2rem
 
 hr
   width: 512px
-  margin: 2em auto
+  margin: 2rem auto
 
 footer
-  padding: 10em
-  font-size: .4em
+  padding: 10rem
 
 .posts
   h3
-    margin-bottom: .5em
+    margin-bottom: .5rem
   a
     text-decoration: underline
     color: inherit
-    font-size: .95em
+    font-size: .95rem
