--- a/themes/stickeroverflow/layout/layout.pug
+++ b/themes/stickeroverflow/layout/layout.pug
@@ -9,13 +9,13 @@ html
       link(rel="shortcut icon" href=theme.favicon)
     title!= config.title
   body
-    nav.navbar.container
+    nav.navbar.container(style='margin-bottom: 5em;')
       a.navbar-item(href="/") 首页
       //- .navbar-brand
       //-   a(href="/") StickerOverflow
       //- a.navbar-item(href="/stickers") 所有贴纸
       a.navbar-item(href=theme.store_url) 商店
-      a.navbar-item 许可列表
+      a.navbar-item(href='/licenses') 许可列表
     !=body
     footer.center.is-size-7
       p Copyright StickerOverflow 2017
