--- a/themes/stickeroverflow/source/css/index.styl
+++ b/themes/stickeroverflow/source/css/index.styl
@@ -35,3 +35,13 @@ footer
     text-decoration: underline
     color: inherit
     font-size: .95rem
+
+.content.post
+  width: 640px
+  margin: 0 auto
+  h1
+    margin-bottom: .4rem
+  .date
+    font-size: .8rem
+  .cnt
+    margin-top: 2rem
