--- a/themes/stickeroverflow/layout/_partial/ga.pug
+++ b/themes/stickeroverflow/layout/_partial/ga.pug
@@ -1,9 +1,8 @@
-script.
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-107945612-1"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
+script(async, src="https://www.googletagmanager.com/gtag/js?id=UA-107945612-1")
 
-    gtag('config', 'UA-107945612-1');
-  </script>
+script.
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-107945612-1');
