--- a/themes/stickeroverflow/layout/layout.pug
+++ b/themes/stickeroverflow/layout/layout.pug
@@ -15,7 +15,7 @@ html
       //- .navbar-brand
       //-   a(href="/") StickerOverflow
       //- a.navbar-item(href="/stickers") 所有贴纸
-      a.navbar-item(href=theme.store_url) 商店
+      a.navbar-item(href=theme.store_url, target='_blank') 商店
       a.navbar-item(href='/licenses') 许可列表
     !=body
     footer.center.is-size-7
