--- a/themes/stickeroverflow/source/css/index.styl
+++ b/themes/stickeroverflow/source/css/index.styl
@@ -28,6 +28,12 @@ hr
 footer
   padding: 10rem
 
+.vertical
+  .item
+    display: inline-block
+    margin-left: .5rem
+    margin-right: .5rem
+
 .posts
   h3
     margin-bottom: .5rem
