--- a/themes/stickeroverflow/layout/index.pug
+++ b/themes/stickeroverflow/layout/index.pug
@@ -47,7 +47,7 @@
     p
       a(href='/licenses') 查看所有在售贴纸的对应许可
 
-  section.posts
-    h3.is-size-4 博客
-    each post in page.posts.toArray()
-      a(href=post.path)!= post.title
+  //- section.posts
+  //-   h3.is-size-4 博客
+  //-   each post in page.posts.toArray()
+  //-     a(href=post.path)!= post.title
