--- a/themes/stickeroverflow/layout/index.pug
+++ b/themes/stickeroverflow/layout/index.pug
@@ -31,6 +31,8 @@
       .item
         a(href=theme.weibo_url, target='_blank') 微博
       .item
+        a(href=theme.github_url, target='_blank') Github
+      .item
         a(href='/' + config.feed.path) RSS
 
   hr
