--- a/themes/stickeroverflow/layout/post.pug
+++ b/themes/stickeroverflow/layout/post.pug
@@ -1,5 +1,5 @@
 .container
-  .content.post
-    h1.title!= page.title
+  .post
+    h1.is-size-3!= page.title
     h4.date!= page.date.format('YYYY-MM-DD')
-    .cnt!= page.content
+    .cnt.is-size-6!= page.content
