--- a/themes/stickeroverflow/source/css/index.styl
+++ b/themes/stickeroverflow/source/css/index.styl
@@ -22,11 +22,13 @@ section.intro
   padding: 2rem
 
 hr
-  width: 512px
+  max-width: 512px
   margin: 2rem auto
 
 footer
-  padding: 10rem
+  text-align: center
+  padding-top: 4rem
+  padding-bottom: 4rem
 
 .vertical
   .item
@@ -42,12 +44,17 @@ footer
     color: inherit
     font-size: .95rem
 
-.content.post
-  width: 640px
+.post
+  width: 95%
+  max-width: 640px
   margin: 0 auto
+  padding: 1rem
   h1
     margin-bottom: .4rem
   .date
     font-size: .8rem
   .cnt
     margin-top: 2rem
+    p
+      margin-top: 1rem
+      margin-bottom: 1rem
