--- a/themes/stickeroverflow/source/css/index.styl
+++ b/themes/stickeroverflow/source/css/index.styl
@@ -58,3 +58,9 @@ footer
     p
       margin-top: 1rem
       margin-bottom: 1rem
+  img
+    width: 60%
+    margin: 0 auto
+    display: block
+    margin-top: 2rem
+    margin-bottom: 2rem
