--- a/themes/stickeroverflow/layout/layout.pug
+++ b/themes/stickeroverflow/layout/layout.pug
@@ -19,4 +19,4 @@ html
       a.navbar-item(href='/licenses') 许可列表
     !=body
     footer.center.is-size-7
-      p Copyright StickerOverflow 2017
+      p Copyright StickerOverflow 2017-2019
