--- a/themes/stickeroverflow/layout/index.pug
+++ b/themes/stickeroverflow/layout/index.pug
@@ -22,7 +22,7 @@
 
 .container.center
   section.padding
-    img.logo(src="/images/logo.JPG")
+    img.logo(src="//ws4.sinaimg.cn/large/006tKfTcly1g1ez1b82knj30u00u0thk.jpg")
     h1.title!= config.title
     h2.subtitle!= config.subtitle
     a.button(href=theme.store_url).round.is-medium 官方商店
